[package]
name = "js-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
akun = { path = "../.." }
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.getrandom]
version = "0.2"
features = ["js"]

[dependencies.rand]
version = "0.8"
features = ["small_rng"]

[dependencies.web-sys]
version = "0.3"
features = ["console"]
